--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.2.1",
+    "sass-embedded": "^1.86.0",
     "vite": "^6.0.5",
     "vite-plugin-vue-devtools": "^7.6.8"
   }
