--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@vueuse/core": "^13.0.0",
+    "axios": "^1.8.4",
     "js-cookie": "^3.0.5",
     "jwt-decode": "^4.0.0",
     "pinia": "^2.3.0",
